<resources>
    <string name="app_name">ChannelMessaging</string>
    <string name="action_deco">Log Out</string>
    <string name="action_infos">Informations</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="btn_connexion">Log In</string>
    <string name="btn_send">Send</string>
    <string name="catchphrase">Login to access the instant messaging</string>
    <string name="channel">Channel</string>
    <string name="channel_list">Channels List</string>
    <string name="image_profil">Image</string>
    <string name="locate_on_map">Locate it on a map</string>
    <string name="make_a_choice">Choose an option</string>
    <string name="tv_id">Login</string>
    <string name="tv_password">Password</string>
    <string name="title_activity_maps">Map</string>
</resources>
