<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_deco"
                android:orderInCategory="100"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/action_deco"
                app:showAsAction="always" />
            <item
                android:id="@+id/action_infos"
                android:orderInCategory="100"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/action_infos"
                app:showAsAction="always" />
        </menu>
    </item>
</menu>